--- a/src/metro.html
+++ b/src/metro.html
@@ -1,5 +1,4 @@
 <div>
-  <h1>metro.js</h1>
   <div>
     <div class="control-panel">
       <button class="btn btn-xs"
@@ -12,11 +11,11 @@
                 ng-click="ctrl.draw();">Draw</button>
         <button class="btn btn-xs"
                 ng-class="{'btn-primary': ctrl.inputMode == 'edit'}"
-                ng-click="ctrl.editMetroLine();">Edit</button>
-        <button class="btn btn-xs"
-                ng-class="{'btn-primary': ctrl.inputMode == 'implement'}"
-                ng-click="ctrl.implement();">Implement</button>
+                ng-click="ctrl.editMetroLine();">Refine</button>
       </div>
+      <button class="btn btn-xs"
+              ng-disabled="0"
+              ng-click="ctrl.addStation()">Add Station</button>
     </div>
     <div class="control-panel ng-hide"
          ng-show="ctrl.inputMode == 'draw'">
@@ -87,14 +86,6 @@
                 ng-disabled="0"
                 ng-click="ctrl.splitLinePath();">Split</button>
     </div>
-    <div class="control-panel ng-hide"
-         ng-show="ctrl.inputMode == 'implement'">
-      <button class="btn btn-xs"
-              ng-disabled="0"
-              ng-click="ctrl.addStation()">Add Station</button>
-      <button class="btn btn-xs"
-              ng-disabled="1">Delete Station</button>
-    </div>
   </div>
 </div>
 <div>
@@ -105,9 +96,11 @@
   <div ng-repeat="line in ctrl.metroLines track by $index">
     <form class="form-inline">
       <div class="input-group-sm">
+        <label>Id {{line.id}}</label>
         <label>Name</label>
         <input type="text" class="form-control" placeholder="Yamanote Line">
         <label>Color</label>
+        <input type="color">
         rgba
       </div>
     </form>
@@ -115,15 +108,19 @@
       <div class="panel-body">
         <div ng-repeat="station in line.stations track by $index">
           <div class="station"></div>
-          <div>name</div>
-          <div>color</div>
+          <div>Id {{station.id}}</div>
+          <div>Name</div>
+          <div>Color</div>
           Position
-            <input type="number" step="1" min="0" max="100"
+            <input type="range" step="0.1" min="0" max="100"
+                   style="width: 200px;"
                    ng-model="station.position"
-                   ng-change="ctrl.moveStation(station)">%
+                   ng-change="ctrl.moveStation(line, station)">%
         </div>
       </div>
     </div>
   </div>
 </div>
+<!--
 <pre>{{ctrl.metroLines | json}}</pre>
+-->
